# pinotes-lite

./: .env.example  1-pager.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: auth.py  config.py  database.py  main.py  notes.py  pathguard.py  search.py  tree.py  wikilinks.py
docs/prds/: 001-wikilink-navigation.md  002-auto-table-of-contents.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: DisambiguationModal.css  DisambiguationModal.jsx  FloatingTocButton.css  FloatingTocButton.jsx  LinkedMentions.css  LinkedMentions.jsx  TableOfContents.css  TableOfContents.jsx  Wikilink.css  Wikilink.jsx
frontend/src/utils/: wikilinks.js
tests/: test_attachments.py  test_auth.py  test_notes.py  test_pathguard.py  test_search.py  test_tree.py
