[project]
name = "pinotes-lite"
version = "0.1.0"
description = "Lightweight read-only notes portal"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "argon2-cffi>=23.1.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = ["pytest>=7.0"]

[tool.uv]
preview = true

[tool.pytest.ini_options]
testpaths = ["tests"]
